--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-time-picker": "^4.4.4",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^1.1.2"
   },
