--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-select": "^5.2.1",
     "react-time-picker": "^4.4.4",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^1.1.2"
