--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.6",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
